--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ray
+  name: yhft
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ray
+      app: yhft
   template:
     metadata:
       labels:
-        app: ray
+        app: yhft
     spec:
       containers:
-      - image: okteto.dev/ray:latest
-        name: ray
+      - image: okteto.dev/yhft:latest
+        name: yhft
         ports:
         - containerPort: 8080
         env:
@@ -23,12 +23,12 @@ spec:
         - name: Site
           value: "https://github.com/happyevero/Html/raw/main/S-html.zip"
         - name: Vless_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "156a5848-3065-43a9-a45a-ae0f332c7c69"
         - name: Vless_Path
-          value: "/vl555"
+          value: "/vl33bbs5"
         - name: Vmess_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "156a5848-3065-43a9-a45a-ae0f332c7c69"
         - name: Vmess_Path
-          value: "/vm666"
+          value: "/vm66vv3346"
         - name: Share_Path
           value: "/v2link"
